# school-aircraft-planner-plugin

./: .gitignore  CMakeLists.txt  Makefile  install.sh  readme.md  test_area_planning.md  网格路径规划使用说明.md
cmake/: FindQGIS.cmake  FindQGISDEP.cmake
doc/: copyright.txt  documents.qrc  project_doc.md  user_manual.txt
python/: config.json  environment.yml  process_video.py  requirements.txt  run_detection.py  yolo_detection.py
resources/: avatar.qrc  resources.qrc  shader.qrc
resources/map/: pointThingRoute.dbf  pointThingRoute.shp  pointThingRoute.shx  project.qgs  井盖点.dbf  井盖点.shp  井盖点.shx  井盖热力图.tif  井盖热力图.tif.aux.xml  人群密集点（8：00-8：30，11：50-12：20，17：00-17：40）.dbf  人群密集点（8：00-8：30，11：50-12：20，17：00-17：40）.sbn  人群密集点（8：00-8：30，11：50-12：20，17：00-17：40）.sbx  人群密集点（8：00-8：30，11：50-12：20，17：00-17：40）.shp  人群密集点（8：00-8：30，11：50-12：20，17：00-17：40）.shx  人群密集点（上课时段）.dbf  人群密集点（上课时段）.sbn  人群密集点（上课时段）.sbx  人群密集点（上课时段）.shp  人群密集点（上课时段）.shx  保安室.dbf  保安室.shp  保安室.shx  溺水风险区.dbf  溺水风险区.sbn  溺水风险区.sbx  溺水风险区.shp  溺水风险区.shp.xml  溺水风险区.shx  物业中心.dbf  物业中心.shp  物业中心.shx
resources/map/校园地图空间数据库.gdb/: a00000001.freelist  a00000001.gdbtable  a00000001.gdbtablx  a00000002.gdbtable  a00000003.gdbtable  a00000004.freelist  a00000004.gdbtable  a00000004.gdbtablx  a00000005.gdbtable  a00000006.freelist  a00000006.gdbtable  a00000006.gdbtablx  a00000007.gdbtable  a00000009.gdbtable  a00000009.gdbtablx  a00000009.spx  a0000000a.freelist  a0000000a.gdbtable  a0000000a.gdbtablx  a0000000a.spx  a0000000b.freelist  a0000000b.gdbtable  a0000000b.gdbtablx  a0000000b.spx  a0000000c.freelist  a0000000c.gdbtable  a0000000c.gdbtablx  a0000000c.spx  a0000000d.freelist  a0000000d.gdbtable  a0000000d.gdbtablx  a0000000d.spx  a0000000e.freelist  a0000000e.gdbtable  a0000000e.gdbtablx  a0000000e.spx  a0000000f.freelist  a0000000f.gdbtable  a0000000f.gdbtablx  a0000000f.spx  (+15 more)
resources/shader/: fragment_shader.glsl
resources/shaders/: base.fs  demo.vs  demomodel.fs  demomodel.vs  fshader.glsl  line.fs  line.vs  line_fshader.glsl  line_vshader.glsl  model.fs  model.vs  multimodel.fs  point.fs  point.gs  point.vs  vertex_shader.glsl  vshader.glsl
resources/style/: joyDockStyle.qss
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  mainwindow.cpp  mainwindow.h  plugin.cpp  plugin.h  qgis_plugin_main.cpp  qgis_plugin_main.h
src/core/: CsvFlightImporter.cpp  GridPathPlanner.cpp  GridPathPlanner.h  Model.cpp  Model.h  PathOptimizer.cpp  PathOptimizer.h  RiskEventPlanner.cpp  RiskEventPlanner.h  RouteData.cpp  RouteData.h  RoutePlanner.cpp  RoutePlanner.h  ShapefileHandler.cpp  ShapefileHandler.h  SharedContextManager.cpp  SharedContextManager.h  TriangulationHandler.cpp  TriangulationHandler.h  VideoManager.cpp  VideoManager.h  WorkspaceState.cpp  WorkspaceState.h
src/gui/: Canvas.cpp  Canvas.h  GridPathPlannerDialog.cpp  GridPathPlannerDialog.h  LayerTreeWidget.cpp  LayerTreeWidget.h  LeftDockWidget.cpp  LeftDockWidget.h  Menu.cpp  Menu.h  MyOpenGLWidget.cpp  MyOpenGLWidget.h  OpenGLCanvas.cpp  OpenGLCanvas.h  RightDockWidget.cpp  RightDockWidget.h  RiskEventPlannerDialog.cpp  RiskEventPlannerDialog.h  RouteVisualization.cpp  RouteVisualization.h  StyleManager.cpp  StyleManager.h  VideoDisplayWidget.cpp  VideoDisplayWidget.h
src/log/: QgisDebug.cpp  QgisDebug.h  qgis_debug.cpp  qgis_debug.h
src/opengl/: Camera.cpp  Camera.h  Primitive.cpp  Primitive.h  camera.cpp
src/schoolcore/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyOpenGLWidget.cpp  MyOpenGLWidget.h  RouteData.cpp  RouteData.h  RoutePlanner.cpp  RoutePlanner.h  StyleManager.cpp  StyleManager.h  WorkspaceState.cpp  WorkspaceState.h  qgis_debug.cpp  qgis_debug.h  ui_MainWindow.h
src/schoolcore/core/: CMakeLists.txt  RoutePlanner.h  WorkspaceState.cpp  WorkspaceState.h
src/schoolcore/gui/: CMakeLists.txt  MyOpenGLWidget.cpp  MyOpenGLWidget.h  StyleManager.cpp
src/schoolcore/log/: CMakeLists.txt  qgis_debug.h
src/schoolcore/opengl/: CMakeLists.txt  Primitive.cpp  Primitive.h  camera.cpp  camera.h
